fix layout on small screen for autocomplete

--- a/newbeercellar/static/css/autocomplete.css
+++ b/newbeercellar/static/css/autocomplete.css
@@ -4,7 +4,6 @@
     box-shadow: none;
     border-top: 0;
     border-color: #66afe9;
-    
     -webkit-border-radius: 0;
     -webkit-border-bottom-right-radius: 4px;
     -webkit-border-bottom-left-radius: 4px;
@@ -20,7 +19,7 @@
     box-shadow: none;
     border-color: #66afe9;
     border-bottom: 0;
-
+    min-width: 160px;
     -webkit-border-radius: 4px;
     -webkit-border-bottom-right-radius: 0;
     -webkit-border-bottom-left-radius: 0;
@@ -38,4 +37,8 @@
 
 .dropdown-menu > li a:hover {
     background-color: #337ab7 !important;
+}
+
+.dropdown-menu > li > a {
+    white-space: normal !important;
 }
